--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,17 @@
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
+    "react-advanced-cropper": "^0.20.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
