--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.2.0",
     "nodemailer": "^6.10.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6"
   },
   "scripts": {
     "build": "npm install && cd frontend && npm install && npm run build",
